# reflection-metaclasses-research

./: CMakeLists.txt  LICENSE  Makefile  PERFORMANCE_ANALYSIS_RESULTS.md  README.md  example_code.cpp  references.md
English/: 02_background_related_work.md  03_reflection_framework.md  04_metaclasses_design.md  07_integration_modern_features.md
Persian/: 01_abstract_introduction.md  02_background_related_work.md  03_reflection_framework.md  08_challenges_limitations.md  10_conclusion.md  COMPLETE_BIBLIOGRAPHY.md  ~$اله_کامل_C++23_بازتاب_متاکلاس.docx
implementation/: benchmark_framework.py  benchmark_runner.py  comprehensive_benchmark.cpp  working_reflection_demo.cpp
implementation/benchmarks/: binding_reflection.cpp  binding_traditional.cpp  orm_traditional.cpp  pattern_traditional.cpp  serialization_reflection.cpp  serialization_traditional.cpp  template_reflection.cpp  template_traditional.cpp
implementation/results/: benchmark_metaclasses_output.txt  benchmark_results.json  research_summary.md
reflection_metaclasses_paper/: FINAL_SUBMISSION_PACKAGE.md  README.md  paper_outline.md
reflection_metaclasses_paper/English/: 01_abstract_introduction.md  05_performance_analysis.md  06_case_studies.md  08_challenges_limitations.md  09_future_directions.md  10_conclusion.md  C++23_IEEE_Journal.docx  COMPLETE_BIBLIOGRAPHY.md  ~$+23_ISI_Journal_Paper.docx  ~$+23_Reflection_ISI_Journal.docx
reflection_metaclasses_paper/Persian/: 04_metaclasses_design.md  05_performance_analysis.md  06_case_studies.md  07_integration_modern_features.md  09_future_directions.md  COMPLETE_PAPER.md  COMPLETE_PAPER_MERGED.md  JOURNAL_FORMAT_HEADER.md  convert_to_word.ps1  create_final_word.ps1  create_professional_word.ps1  create_reference_doc.ps1  create_styled_word.ps1  finalize_word_document.ps1  fix_persian_chars.ps1  format_word_document.ps1  journal_style.css  journal_template.yaml  template_header.tex  ~$اله_نهایی_فونت_تصحیح.docx  خلاصه_مقاله_C++23.md  مقاله_C++23_حرفه‌ای_نهایی.docx  مقاله_HTML_کامل.html  مقاله_تصحیح_شده.md  مقاله_تصحیح_شده_نهایی.md  مقاله_فونت_مخصوص.html  مقاله_نهایی_فونت_تصحیح.docx  مقاله_نهایی_فونت_مناسب.docx  مقاله_نهایی_ژورنالی.html  مقاله_ژورنالی_C++23.html  مقاله_ژورنالی_نهایی.docx  مقاله_کامل_C++23_بازتاب_متاکلاس.docx  مقاله_کامل_بازتاب_متاکلاس_C++23.md
reflection_metaclasses_paper/implementation/: mock_reflection_demo.cpp
reflection_metaclasses_paper/implementation/benchmarks/: orm_reflection.cpp  pattern_reflection.cpp
reflection_metaclasses_paper/submissions/: ACM_TOPLAS_SUBMISSION.md
submissions/: IEEE_TSE_SUBMISSION.md
supplementary_materials/: BENCHMARK_DATA.md  CODE_REPOSITORY.md  README.md  statistical_analysis.py
